@@ -1,14 +1,0 @@
-#!/bin/bash
-. /data/Wing/bin/dataapps.sh
-export WING_APP=/data/[% project %]
-export WING_CONFIG=/data/[% project %]/etc/wing.conf
-cd /data/[% project %]/bin
-
-if [ $UID == 0 ] 
-  then
-	echo "switching root to nobody"
-	export RUNAS="--user nobody --group nobody"
-fi
-
-start_server --port 5001 -- starman --workers 2 $RUNAS --preload-app web.psgi
-
