@@ -1,6 +1,6 @@
 log4perl.logger = DEBUG, mainlog
 log4perl.appender.mainlog = Log::Log4perl::Appender::File
-log4perl.appender.mainlog.filename = /data/apps/logs/[% project %].log
+log4perl.appender.mainlog.filename = /data/apps/logs/wing.log
 log4perl.appender.mainlog.layout = PatternLayout
 log4perl.appender.mainlog.layout.ConversionPattern = %d %p %m %n
 
