@@ -4,6 +4,15 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2018-06-19
+ * Migrate Wing to use the latest Perl (5.26.2) and modules.
+ * Removed start_web.sh (and related scripts) in favor of wing commands.
+    wing web --start
+    wing web --stop
+    wing rest --start
+    wing rest --stop
+ * Moose "around" wrappers on DBIx::Class methods are no longer executed at instanciation time. But they are executed at every other time.
+
 2018-04-30
  * Change X-HTTP-Real-IP in nginx.conf to use $http_x_forwarded_for instead of $remote_addr to be compatible with Amazon load balancer.
  * Added last_op to lib/Wing/Role/User.pm
